sfSandBoxCode/force-app/main/default/objects/FLT_Operators__c/FLT_Operators__c.object-meta.xml
<CustomObject>
    <label>FLT Operator</label>
    <nameField>
        <displayFormat>OP-{000000000}</displayFormat>
        <label>FLT Operators Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FLT Operators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>