sfSandBoxCode/force-app/main/default/objects/FLT_Operators__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>FLT Operators</relationshipLabel>
    <relationshipName>FLT_Operators</relationshipName>
    <type>Lookup</type>
</CustomField>