sfSandBoxCode/force-app/main/default/objects/FLT_Operators__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <length>150</length>
    <type>Text</type>
</CustomField>