sfSandBoxCode/force-app/main/default/objects/FLT_Operators__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Operator is active/inactive</description>
    <inlineHelpText>Operator is active/inactive</inlineHelpText>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>